MAT-8830 refactor code to use deleteByTargetIds